crates/toml/tests/snapshots/invalid/table/duplicate-key-02.stderr
TOML parse error at line 4, column 2
  |
4 | [fruit.type]
  |  ^^^^^^^^^^
duplicate key
